Add auth service

--- a/src/Chatter.API/appsettings.json
+++ b/src/Chatter.API/appsettings.json
@@ -1,6 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=ChatterDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Host=localhost;Database=chatterdb;Username=postgres;Password=postgres"
+  },
+  "JwtSettings": {
+    "SecretKey": "YourSuperSecretKeyThatIsAtLeast32CharactersLong!",
+    "Issuer": "ChatterAPI",
+    "Audience": "ChatterClient",
+    "ExpiryInMinutes": "60"
   },
   "Logging": {
     "LogLevel": {
