--- a/src/Chatter.API/Chatter.API.csproj
+++ b/src/Chatter.API/Chatter.API.csproj
@@ -2,9 +2,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Chatter.Infrastructure\Chatter.Infrastructure.csproj" />
+    <ProjectReference Include="..\Chatter.Application\Chatter.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
