Add login service

--- a/src/Chatter.API/appsettings.json
+++ b/src/Chatter.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=chatterdb;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Database=chatterdb;Username=chatter;Password=chatter123"
   },
   "JwtSettings": {
     "SecretKey": "YourSuperSecretKeyThatIsAtLeast32CharactersLong!",
