--- a/src/Chatter.UI/package.json
+++ b/src/Chatter.UI/package.json
@@ -60,7 +60,8 @@
     "@microsoft/signalr": "^8.0.0",
     "axios": "^1.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "simple-peer": "^9.11.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
@@ -70,6 +71,7 @@
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1",
     "vite": "^5.0.0",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "wait-on": "^7.0.0"
   }
 }
