FIX online status

--- a/src/Chatter.UI/package.json
+++ b/src/Chatter.UI/package.json
@@ -59,6 +59,7 @@
   },
   "dependencies": {
     "@capacitor/android": "^8.0.0",
+    "@capacitor/app": "^8.0.0",
     "@capacitor/cli": "^7.4.4",
     "@capacitor/core": "^8.0.0",
     "@microsoft/signalr": "^8.0.0",
