--- a/src/Chatter.UI/package.json
+++ b/src/Chatter.UI/package.json
@@ -62,8 +62,11 @@
     "@capacitor/app": "^8.0.0",
     "@capacitor/cli": "^7.4.4",
     "@capacitor/core": "^8.0.0",
+    "@capacitor/local-notifications": "^8.0.0",
+    "@capacitor/push-notifications": "^8.0.0",
     "@microsoft/signalr": "^8.0.0",
     "axios": "^1.6.0",
+    "firebase": "^12.7.0",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
