--- a/src/Chatter.UI/package.json
+++ b/src/Chatter.UI/package.json
@@ -60,10 +60,12 @@
   "dependencies": {
     "@capacitor/android": "^8.0.0",
     "@capacitor/app": "^8.0.0",
+    "@capacitor/camera": "^8.0.0",
     "@capacitor/cli": "^7.4.4",
     "@capacitor/core": "^8.0.0",
     "@capacitor/local-notifications": "^8.0.0",
     "@capacitor/push-notifications": "^8.0.0",
+    "@capacitor/status-bar": "^8.0.0",
     "@microsoft/signalr": "^8.0.0",
     "axios": "^1.6.0",
     "firebase": "^12.7.0",
