--- a/src/Chatter.UI/package.json
+++ b/src/Chatter.UI/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chatter",
   "private": true,
-  "version": "1.1.2",
+  "version": "1.2.1",
   "description": "Chatter Real-time Chat Application",
   "author": {
     "name": "Emin Ates",
@@ -69,15 +69,21 @@
     "@capacitor/camera": "^8.0.0",
     "@capacitor/cli": "^7.4.4",
     "@capacitor/core": "^8.0.0",
+    "@capacitor/haptics": "^8.0.0",
+    "@capacitor/ios": "^8.0.0",
+    "@capacitor/keyboard": "^8.0.0",
     "@capacitor/local-notifications": "^8.0.0",
     "@capacitor/push-notifications": "^8.0.0",
+    "@capacitor/splash-screen": "^8.0.0",
     "@capacitor/status-bar": "^8.0.0",
-    "@microsoft/signalr": "^8.0.0",
-    "axios": "^1.6.0",
+    "@hugotomazi/capacitor-navigation-bar": "^4.0.1",
+    "@microsoft/signalr": "^8.0.17",
+    "axios": "^1.13.2",
     "firebase": "^12.7.0",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.11.0",
     "simple-peer": "^9.11.1"
   },
   "devDependencies": {
