--- a/src/Chatter.UI/package.json
+++ b/src/Chatter.UI/package.json
@@ -90,11 +90,19 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.23",
     "concurrently": "^8.0.0",
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "vite": "^5.0.0",
     "vite-plugin-node-polyfills": "^0.24.0",
     "wait-on": "^7.0.0"
+  },
+  "overrides": {
+    "@hugotomazi/capacitor-navigation-bar": {
+      "@capacitor/core": "^8.0.0"
+    }
   }
 }
