--- a/src/Chatter.UI/package.json
+++ b/src/Chatter.UI/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chatter",
   "private": true,
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "Chatter Real-time Chat Application",
   "author": {
     "name": "Emin Ates",
@@ -78,6 +78,7 @@
   "dependencies": {
     "@capacitor/android": "^8.0.0",
     "@capacitor/app": "^8.0.0",
+    "@capacitor/browser": "^8.0.0",
     "@capacitor/camera": "^8.0.0",
     "@capacitor/cli": "^7.4.4",
     "@capacitor/core": "^8.0.0",
@@ -98,6 +99,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.11.0",
+    "semver": "^7.7.3",
     "simple-peer": "^9.11.1"
   },
   "devDependencies": {
