FIX production json

--- a/src/Chatter.API/appsettings.Production.json
+++ b/src/Chatter.API/appsettings.Production.json
@@ -11,7 +11,7 @@
   "Cors": {
     "AllowedOrigins": [
       "https://yourdomain.com",
-      "https://app.yourdomain.com"
+      "https://chatter-seven-pied.vercel.app/"
     ]
   },
   "Logging": {
@@ -21,7 +21,7 @@
       "Chatter": "Information"
     }
   },
-  "AllowedHosts": "yourdomain.com;app.yourdomain.com",
+  "AllowedHosts": "chatter-seven-pied.vercel.app",
   "RateLimit": {
     "PermitLimit": 100,
     "Window": "00:01:00"
