--- a/src/Chatter.UI/vercel.json
+++ b/src/Chatter.UI/vercel.json
@@ -18,11 +18,23 @@
         },
         {
           "key": "X-Frame-Options",
-          "value": "DENY"
+          "value": "SAMEORIGIN"
         },
         {
           "key": "X-XSS-Protection",
           "value": "1; mode=block"
+        },
+        {
+          "key": "Content-Security-Policy",
+          "value": "frame-ancestors 'self' https://chatter-seven-pied.vercel.app https://chatter-7q0c.onrender.com;"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "strict-origin-when-cross-origin"
+        },
+        {
+          "key": "Permissions-Policy",
+          "value": "camera=self, microphone=self, geolocation=()"
         }
       ]
     }
