--- a/src/Chatter.UI/package.json
+++ b/src/Chatter.UI/package.json
@@ -99,6 +99,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.11.0",
+    "react-window": "^2.2.6",
     "semver": "^7.7.3",
     "simple-peer": "^9.11.1"
   },
